tests/expected_invalid_grant_failure_mismatch.diag.out
<input>:21:5: error: 'grant' body fails with reason 'SubmitFailure' but grantor fails with reason 'StartFailure'
        grant start_pass() as pass {
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
